--- a/main.css
+++ b/main.css
@@ -340,7 +340,7 @@ div.message > div.msg > div.from > span.un {
     background: url("https://i.imgur.com/1ZXIvAf.png") no-repeat !important;
 }
 #user-rollover.id-11556348 .meta .thumb {
-    border-color: #90b0cf !important;
+    border-color: #3e3e3e !important;
 }
 .id-11556348 .msg .from.bouncer .un,
 .id-11556348 .from .un,
@@ -353,8 +353,8 @@ div.message > div.msg > div.from > span.un {
 }
 #chat .cm.message.id-11556348,
 #chat .cm.emote.id-11556348 {
-    border-left: #90b0cf 3px dotted !important;
-    border-right: #90b0cf 3px dotted !important;
+    border-left: #3e3e3e 3px dotted !important;
+    border-right: #3e3e3e 3px dotted !important;
 }
 #chat .cm.message.id-11556348:hover,
 #chat .cm.emote.id-11556348:hover {
@@ -382,7 +382,7 @@ div.message > div.msg > div.from > span.un {
     background: url("https://i.imgur.com/1ZXIvAf.png") no-repeat !important;
 }
 #user-rollover.id-42616838 .meta .thumb {
-    border-color: #90b0cf !important;
+    border-color: #3e3e3e !important;
 }
 .id-42616838 .msg .from.bouncer .un,
 .id-42616838 .from .un,
@@ -395,8 +395,8 @@ div.message > div.msg > div.from > span.un {
 }
 #chat .cm.message.id-42616838,
 #chat .cm.emote.id-42616838 {
-    border-left: #90b0cf 3px dotted !important;
-    border-right: #90b0cf 3px dotted !important;
+    border-left: #3e3e3e 3px dotted !important;
+    border-right: #3e3e3e 3px dotted !important;
 }
 #chat .cm.message.id-42616838:hover,
 #chat .cm.emote.id-42616838:hover {
@@ -424,7 +424,7 @@ div.message > div.msg > div.from > span.un {
     background: url("https://i.imgur.com/1ZXIvAf.png") no-repeat !important;
 }
 #user-rollover.id-37174830 .meta .thumb {
-    border-color: #90b0cf !important;
+    border-color: #3e3e3e !important;
 }
 .id-37174830 .msg .from.bouncer .un,
 .id-37174830 .from .un,
@@ -437,8 +437,8 @@ div.message > div.msg > div.from > span.un {
 }
 #chat .cm.message.id-37174830,
 #chat .cm.emote.id-37174830 {
-    border-left: #90b0cf 3px dotted !important;
-    border-right: #90b0cf 3px dotted !important;
+    border-left: #3e3e3e 3px dotted !important;
+    border-right: #3e3e3e 3px dotted !important;
 }
 #chat .cm.message.id-37174830:hover,
 #chat .cm.emote.id-37174830:hover {
@@ -465,7 +465,7 @@ div.message > div.msg > div.from > span.un {
     background: url("https://i.imgur.com/1ZXIvAf.png") no-repeat !important;
 }
 #user-rollover.id-424349 .meta .thumb {
-    border-color: #90b0cf !important;
+    border-color: #3e3e3e !important;
 }
 .id-424349 .msg .from.bouncer .un,
 .id-424349 .from .un,
@@ -478,8 +478,8 @@ div.message > div.msg > div.from > span.un {
 }
 #chat .cm.message.id-424349,
 #chat .cm.emote.id-424349 {
-    border-left: #90b0cf 3px dotted !important;
-    border-right: #90b0cf 3px dotted !important;
+    border-left: #3e3e3e 3px dotted !important;
+    border-right: #3e3e3e 3px dotted !important;
 }
 #chat .cm.message.id-424349:hover,
 #chat .cm.emote.id-424349:hover {
@@ -506,7 +506,7 @@ div.message > div.msg > div.from > span.un {
     background: url("https://i.imgur.com/1ZXIvAf.png") no-repeat !important;
 }
 #user-rollover.id-38607903 .meta .thumb {
-    border-color: #4B0082 !important;
+    border-color: #3e3e3e !important;
 }
 .id-38607903 .msg .from.bouncer .un,
 .id-38607903 .from .un,
@@ -519,8 +519,8 @@ div.message > div.msg > div.from > span.un {
 }
 #chat .cm.message.id-38607903,
 #chat .cm.emote.id-38607903 {
-    border-left: #4B0082 3px dotted !important;
-    border-right: #4B0082 3px dotted !important;
+    border-left: #3e3e3e 3px dotted !important;
+    border-right: #3e3e3e 3px dotted !important;
 }
 #chat .cm.message.id-38607903:hover,
 #chat .cm.emote.id-38607903:hover {
@@ -548,7 +548,7 @@ div.message > div.msg > div.from > span.un {
     background: url("https://i.imgur.com/1ZXIvAf.png") no-repeat !important;
 }
 #user-rollover.id-5049254 .meta .thumb {
-    border-color: #90b0cf !important;
+    border-color: #3e3e3e !important;
 }
 .id-5049254 .msg .from.bouncer .un,
 .id-5049254 .from .un,
@@ -561,8 +561,8 @@ div.message > div.msg > div.from > span.un {
 }
 #chat .cm.message.id-5049254,
 #chat .cm.emote.id-5049254 {
-    border-left: #90b0cf 3px dotted !important;
-    border-right: #90b0cf 3px dotted !important;
+    border-left: #3e3e3e 3px dotted !important;
+    border-right: #3e3e3e 3px dotted !important;
 }
 #chat .cm.message.id-5049254:hover,
 #chat .cm.emote.id-5049254:hover {
@@ -590,7 +590,7 @@ div.message > div.msg > div.from > span.un {
     background: url("https://i.imgur.com/1ZXIvAf.png") no-repeat !important;
 }
 #user-rollover.id-37149260 .meta .thumb {
-    border-color: #90b0cf !important;
+    border-color: #3e3e3e !important;
 }
 .id-37149260 .msg .from.bouncer .un,
 .id-37149260 .from .un,
@@ -603,8 +603,8 @@ div.message > div.msg > div.from > span.un {
 }
 #chat .cm.message.id-37149260,
 #chat .cm.emote.id-37149260 {
-    border-left: #90b0cf 3px dotted !important;
-    border-right: #90b0cf 3px dotted !important;
+    border-left: #3e3e3e 3px dotted !important;
+    border-right: #3e3e3e 3px dotted !important;
 }
 #chat .cm.message.id-37149260:hover,
 #chat .cm.emote.id-37149260:hover {
@@ -686,10 +686,10 @@ div.message > div.msg > div.from > span.un {
 }
 #chat .cm.message.id-40471126,
 #chat .cm.emote.id-40471126 {
-    border-left: #f6ff00 2px dotted !important;
-    border-right: #f6ff00 2px dotted !important;
-    border-top: #f6ff00 2px dotted !important;
-    border-bottom: #f6ff00 2px dotted !important;
+    border-left: #f6ff00 1px dotted !important;
+    border-right: #f6ff00 1px dotted !important;
+    border-top: #f6ff00 1px dotted !important;
+    border-bottom: #f6ff00 1px dotted !important;
 }
 #chat .cm.message.id-40471126:hover,
 #chat .cm.emote.id-40471126:hover {
