--- a/badges.css
+++ b/badges.css
@@ -596,7 +596,7 @@
 }
 /*User Background*/
 .cm.id-42616838::before {
-    background-image: url("");
+    background-image: url("https://i.imgur.com/jvqfsF0.png");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
@@ -604,7 +604,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.1;
+    opacity: 0.2;
     z-index: -1;
     transition: 0.4s;
 }
