--- a/badges.css
+++ b/badges.css
@@ -529,7 +529,7 @@
     transition: 0.4s;
 }
 
-/* Ageless - SCUFFED */
+/* Ageless */
 #chat-messages .id-37174830 .badge-box {
     width: 30px;
     height: 30px;
@@ -556,7 +556,7 @@
 }
 /*User Background*/
 .cm.id-37174830::before {
-    background-image: url("");
+    background-image: url("https://i.imgur.com/JpJWIO6.png");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
@@ -564,7 +564,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.1;
+    opacity: 0.2;
     z-index: -1;
     transition: 0.4s;
 }
