--- a/badges.css
+++ b/badges.css
@@ -156,7 +156,7 @@
 }
 /*User Background*/
 .cm.id-37218461::before {
-    background-image: url("");
+    background-image: url("https://i.imgur.com/T9mflGN.png");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
@@ -164,7 +164,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.1;
+    opacity: 0.3;
     z-index: -1;
     transition: 0.4s;
 }
