--- a/badges.css
+++ b/badges.css
@@ -158,8 +158,8 @@
 .cm.id-37218461::before {
     background-image: url("https://i.imgur.com/T9mflGN.png");
     background-repeat: no-repeat;
-    content: "              Bot Dev";
-    position: absolute;
+    content: "Bot Dev";
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
