--- a/badges.css
+++ b/badges.css
@@ -476,7 +476,7 @@
 }
 /*User Background*/
 .cm.id-11556348::before {
-    background-image: url("");
+    background-image: url("https://i.imgur.com/01KItPo.gifv");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
