Added scuffed text Smile

--- a/badges.css
+++ b/badges.css
@@ -598,7 +598,7 @@
 .cm.id-42616838::before {
     background-image: url("https://i.imgur.com/jvqfsF0.png");
     background-repeat: no-repeat;
-    content: "";
+    content: "MVP | May 2019";
     position: absolute;
     top: 0;
     left: 0;
