Fixed border radiuses on User Info cards.

--- a/badges.css
+++ b/badges.css
@@ -27,6 +27,7 @@
 #chat-messages .id-3941421 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/TTuZa8k.gif");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -67,6 +68,7 @@
 #chat-messages .id-37147238 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/Sp7GV5H.gif");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -107,6 +109,7 @@
 #chat-messages .id-38539600 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/opEPJRV.png");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -147,6 +150,7 @@
 #chat-messages .id-37218461 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/Ikl54iI.png");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -187,6 +191,7 @@
 #chat-messages .id-37840096 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/4miw7P8.gif");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -227,6 +232,7 @@
 #chat-messages .id-14846989 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/XMMcRaY.gif");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -267,6 +273,7 @@
 #chat-messages .id-40471126 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/sNRO3ye.png");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -307,6 +314,7 @@
 #chat-messages .id-38773628 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/3FZLdrG.gif");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -347,6 +355,7 @@
 #chat-messages .id-39769462 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/ln3oD3Q.gif");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -387,6 +396,7 @@
 #chat-messages .id-6380999 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/kG6bPuu.png");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -427,6 +437,7 @@
 #chat-messages .id-37224716 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/LBI29d9.gif");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -467,6 +478,7 @@
 #chat-messages .id-11556348 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/4E79Osz.png");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -507,6 +519,7 @@
 #chat-messages .id-5049254 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/Ci6Qrxu.png");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -547,6 +560,7 @@
 #chat-messages .id-37503257 .badge-box i.bdg {
     background-image: url("");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -587,6 +601,7 @@
 #chat-messages .id-42616838 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/k0FbpRn.png");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -630,6 +645,7 @@
 #chat-messages .id-37174830 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/lA8xIkX.png");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
@@ -670,6 +686,7 @@
 #chat-messages .id-38607903 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/vUhnTA4.png");
     background-size: cover;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     background-position: initial;
