--- a/main.css
+++ b/main.css
@@ -714,7 +714,7 @@ div.message > div.msg > div.from > span.un {
 }
 
 #user-rollover.id-37218461 .info .role span:after {
-    content: 'Bot Developer / ';
+    content: ' / Bot Developer';
 }
 .id-37218461 .msg .from i.icon-chat-bouncer,
 #waitlist .list .user[data-uid="37218461"] .meta.is-staff .name .icon-chat-bouncer,
