--- a/badges.css
+++ b/badges.css
@@ -148,7 +148,7 @@
 /*User Badge*/
 #user-rollover.id-37218461 .badge-box i.bdg,
 #chat-messages .id-37218461 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/Ikl54iI.png");
+    background-image: url("https://i.imgur.com/1bBaIDx.png");
     background-size: cover;
     border-radius: 7px;
     width: 100%;
